# raton

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: software-architect.md
docs/: PLAN.md  progress.txt
docs/tasks/: phase2-01-base-types-enums.md  phase2-02-flight-segment-model.md  phase2-03-itinerary-model.md  phase2-04-price-model.md  phase2-05-flight-offer-model.md  phase2-06-route-model.md  phase2-07-date-range-model.md  phase2-08-user-preferences-model.md  phase2-09-amadeus-response-models.md  phase2-10-mapper-functions.md  phase2-11-package-exports.md  phase2-12-test-fixtures.md
scripts/: test_telegram_notification.py
src/raton/: __init__.py  config.py  logging_config.py  main.py
src/raton/agent/: __init__.py
src/raton/models/: __init__.py  amadeus.py  base.py  flight.py  mappers.py  preferences.py  results.py
src/raton/services/: __init__.py  amadeus.py  exceptions.py  orchestrator.py  preferences.py  rules.py  telegram.py
tests/: __init__.py  conftest.py
tests/integration/: test_amadeus_integration.py
tests/models/: test_amadeus.py  test_base.py  test_flight.py  test_init.py  test_mappers.py  test_preferences.py
tests/services/: test_amadeus_client.py  test_orchestrator.py  test_preferences_repo.py  test_rules.py  test_telegram.py
