[project]
name = "raton"
version = "0.1.0"
description = "AI-powered Telegram bot for flight deal notifications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot==22.5",
    "pydantic-ai==1.41.0",
    "pydantic-settings==2.12.0",
    "apscheduler==3.11.2",
    "amadeus==12.0.0",
    "pyyaml==6.0.3",
]

[project.scripts]
raton = "raton.main:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.14.11",
    "pre-commit==4.5.1",
    "pytest-mock==3.15.1",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["raton"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests that require real API access (skipped in CI with -m 'not integration')",
]
